Fix titles from being stuck

--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -91,10 +91,6 @@
 }
 
 @media (max-width: 768px) {
-  .desktop-svg {
-    display: none;
-  }
-
   .footer-content.mid-content {
     padding-left: 0;
   }
